--- a/src/Brands.html
+++ b/src/Brands.html
@@ -91,82 +91,82 @@
         <hr>
         <div id="alphabetic-sort">
             <li>
-                <a href=#A>A</a>
+                <a href="#A">A</a>
             </li>
             <li>
-                <a href=#B>B</a>
+                <a href="#B">B</a>
             </li>
             <li>
-                <a href=#C>C</a>
+                <a href="#C">C</a>
             </li>
             <li>
-                <a href=#>D</a>
+                <a href="#D">D</a>
             </li>
             <li>
-                <a href=#>E</a>
+                <a href="#E">E</a>
             </li>
             <li>
-                <a href=#>F</a>
+                <a href="#F">F</a>
             </li>
             <li>
-                <a href=#>G</a>
+                <a href="#G">G</a>
             </li>
             <li>
-                <a href=#>H</a>
+                <a href="#H">H</a>
             </li>
             <li>
-                <a href=#>I</a>
+                <a href="#I">I</a>
             </li>
             <li>
-                <a href=#>J</a>
+                <a href="#J">J</a>
             </li>
             <li>
-                <a href=#>K</a>
+                <a href="#K">K</a>
             </li>
             <li>
-                <a href=#>L</a>
+                <a href="#L">L</a>
             </li>
             <li>
-                <a href=#>M</a>
+                <a href="#M">M</a>
             </li>
             <li>
-                <a href=#>N</a>
+                <a href="#N">N</a>
             </li>
             <li>
-                <a href=#>O</a>
+                <a href="#O">O</a>
             </li>
             <li>
-                <a href=#>P</a>
+                <a href="#P">P</a>
             </li>
             <li>
-                <a href=#>Q</a>
+                <a href="#Q">Q</a>
             </li>
             <li>
-                <a href=#>R</a>
+                <a href="#R">R</a>
             </li>
             <li>
-                <a href=#>S</a>
+                <a href="#S">S</a>
             </li>
             <li>
-                <a href=#>T</a>
+                <a href="#T">T</a>
             </li>
             <li>
-                <a href=#>U</a>
+                <a href="#U">U</a>
             </li>
             <li>
-                <a href=#>V</a>
+                <a href="#V">V</a>
             </li>
             <li>
-                <a href=#>W</a>
+                <a href="#W">W</a>
             </li>
             <li>
-                <a href=#>X</a>
+                <a href="#X">X</a>
             </li>
             <li>
-                <a href=#>Y</a>
+                <a href="#Y">Y</a>
             </li>
             <li>
-                <a href=#>Z</a>
+                <a href="#Z">Z</a>
             </li>
             <li>
                 <a href=#>#</a>
@@ -229,7 +229,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">D</td>
+                    <td class="Alphabet" id="D">D</td>
                     <td>
                         <p>DION LEE</p>
                     </td>
@@ -238,7 +238,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">E</td>
+                    <td class="Alphabet" id="E">E</td>
                     <td>
                         <p>ELEVEN PARIS</p>
                     </td>
@@ -247,7 +247,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">F</td>
+                    <td class="Alphabet" id="F">F</td>
                     <td>
                         <p>FARFETCH</p>
                     </td>
@@ -256,7 +256,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">G</td>
+                    <td class="Alphabet" id="G">G</td>
                     <td>
                         <p>GOLDEN GOOSE</p>
                     </td>
@@ -265,7 +265,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">G</td>
+                    <td class="Alphabet" id="H">H</td>
                     <td>
                         <p>HELMUT LANG</p>
                     </td>
@@ -274,7 +274,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">I</td>
+                    <td class="Alphabet" id="I">I</td>
                     <td>
                         <p>I LOVE UGLY</p>
                     </td>
@@ -283,7 +283,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">J</td>
+                    <td class="Alphabet" id="J">J</td>
                     <td>
                         <p>JUICE</p>
                     </td>
@@ -292,7 +292,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">K</td>
+                    <td class="Alphabet" id="K">K</td>
                     <td>
                         <p>K-WAY</p>
                     </td>
@@ -301,7 +301,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">L</td>
+                    <td class="Alphabet" id="L">L</td>
                     <td>
                         <p>LOUIS VUITTON</p>
                     </td>
@@ -310,7 +310,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">M</td>
+                    <td class="Alphabet" id="M">M</td>
                     <td>
                         <p>MAISON MARGIELA</p>
                     </td>
@@ -319,7 +319,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">N</td>
+                    <td class="Alphabet" id="N">N</td>
                     <td>
                         <p>NAMACHECKO</p>
                     </td>
@@ -328,7 +328,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">O</td>
+                    <td class="Alphabet" id="O">O</td>
                     <td>
                         <p>OBEY</p>
                     </td>
@@ -337,7 +337,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">P</td>
+                    <td class="Alphabet" id="P">P</td>
                     <td>
                         <p>P.A.M</p>
                     </td>
@@ -346,13 +346,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">Q</td>
+                    <td class="Alphabet" id="Q">Q</td>
                     <td>
                         <p>QASIMI</p>
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">R</td>
+                    <td class="Alphabet" id="R">R</td>
                     <td>
                         <p>RAG & BONES</p>
                     </td>
@@ -361,7 +361,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">S</td>
+                    <td class="Alphabet" id="S">S</td>
                     <td>
                         <p>SAINT LAURENT</p>
                     </td>
@@ -370,7 +370,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">T</td>
+                    <td class="Alphabet" id="T">T</td>
                     <td>
                         <p>TAKAHIROMIYASHITA THESOLOIST.</p>
                     </td>
@@ -379,7 +379,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">U</td>
+                    <td class="Alphabet" id="U">U</td>
                     <td>
                         <p>UMBRO</p>
                     </td>
@@ -388,7 +388,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">V</td>
+                    <td class="Alphabet" id="V">V</td>
                     <td>
                         <p>VANS</p>
                     </td>
@@ -397,7 +397,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">W</td>
+                    <td class="Alphabet" id="W">W</td>
                     <td>
                         <p>WALTER VAN BEIRENDONCK</p>
                     </td>
@@ -406,13 +406,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">X</td>
+                    <td class="Alphabet" id="X">X</td>
                     <td>
                         <p>X-LARGE</p>
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">Y</td>
+                    <td class="Alphabet" id="Y">Y</td>
                     <td>
                         <p>YANG LI</p>
                     </td>
@@ -421,7 +421,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">Z</td>
+                    <td class="Alphabet" id="Z">Z</td>
                     <td>
                         <p>ZARA</p>
                     </td>
